# ink-aa

./: Cargo.toml  GRANT-DRAFT-EN-01.md  GRANT-DRAFT-EN-02.md  GRANT-DRAFT.md  GRANT-DRAFT2.md  README.md  rust-toolchain.toml
.cargo/: config
bundler/: Cargo.toml  README.md
bundler/src/: main.rs
contracts/base_account/: Cargo.toml  lib.rs
contracts/base_paymaster/: Cargo.toml  lib.rs
contracts/entry_point/: Cargo.toml  lib.rs
contracts/flip/: Cargo.toml  lib.rs
contracts/nonce_manager/: Cargo.toml  lib.rs
contracts/recover_sig/: Cargo.toml  lib.rs
contracts/sender_creator/: Cargo.toml  lib.rs
contracts/simple_paymaster/: Cargo.toml  lib.rs
contracts/stake_manager/: Cargo.toml  lib.rs
core/: env.rs  error.rs  exec.rs  helpers.rs  mod.rs  user_operation.rs
core/env/: Cargo.toml  lib.rs
core/exec/: Cargo.toml  lib.rs
core/helpers/: Cargo.toml  lib.rs
core/user_operation/: Cargo.toml  lib.rs
traits/: account.rs  aggregator.rs  entry_point.rs  mod.rs  paymaster.rs  sender_creator.rs  simply_entry_point.rs  stake_manager.rs
traits/account_trait/: Cargo.toml  lib.rs
traits/aggregator_trait/: Cargo.toml  lib.rs
traits/entry_point_trait/: Cargo.toml  lib.rs
traits/nonce_manager_trait/: Cargo.toml  lib.rs
traits/paymaster_trait/: Cargo.toml  lib.rs
traits/stake_manager_trait/: Cargo.toml  lib.rs
xtask/: Cargo.toml
xtask/src/: build.rs  deploy.rs  flags.rs  main.rs
