[package]
name = "ink-aa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["contracts/*", "xtask"]

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

num-traits = { version = "0.2", default-features = false }

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "num-traits/std"]
ink-as-dependency = []
e2e-tests = []

[dev-dependencies]
hex = "0.4"

[lib]
name = "ink_aa"
path = "lib.rs"
crate-type = ["rlib"]
