[package]
name = "entry_point"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"


[dev-dependencies]
ink_e2e = "4.2.0"

# base_paymaster = { path = "../base_paymaster", default-features = false, features = ["ink-as-dependency"] }
# base_account = { path = "../base_account", default-features = false, features = ["ink-as-dependency"] }
# simple_paymaster = { path = "../simple_paymaster", default-features = false, features = ["ink-as-dependency"] }
# recover_sig = { path = "../recover_sig", default-features = false, features = ["ink-as-dependency"] }
# flip = { path = "../flip", default-features = false, features = ["ink-as-dependency"] }

[lib]
path = "lib.rs"

[dependencies]
ink-aa = { path = "../..", default-features = false, features = ["ink-as-dependency"] }
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

stake_manager = { path = "../stake_manager", default-features = false, features = ["ink-as-dependency"] }
nonce_manager = { path = "../nonce_manager", default-features = false, features = ["ink-as-dependency"] }

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "ink-aa/std", "stake_manager/std", "nonce_manager/std"]
ink-as-dependency = []
e2e-tests = []


[profile.release]
overflow-checks = false
