[package]
name = "simple_paymaster"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[dependencies]
ink-aa = { path = "../..", default-features = false, features = ["ink-as-dependency"] }
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

base_paymaster = { path = "../base_paymaster", default-features = false, features = ["ink-as-dependency"] }


[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "ink-aa/std"]
ink-as-dependency = []
e2e-tests = []


[profile.release]
overflow-checks = false
